give results separate route

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Varela+Round|Anton|Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round|Maven+Pro|Righteous|Anton"
+    rel="stylesheet">
   <title>MR Stats</title>
 </head>
 
